Bug 102794 - Fix QNX Qt build by enabling JIT.
Summary: Fix QNX Qt build by enabling JIT.
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Nobody
URL:
Keywords:
Depends on:
Blocks: 74040
  Show dependency treegraph
 
Reported: 2012-11-20 04:12 PST by Sergio Martins
Modified: 2012-12-12 03:40 PST (History)
7 users (show)

See Also:


Attachments
Patch (997 bytes, patch)
2012-11-20 04:17 PST, Sergio Martins
no flags Details | Formatted Diff | Diff
Patch (997 bytes, patch)
2012-11-20 04:21 PST, Sergio Martins
no flags Details | Formatted Diff | Diff
Patch (1.71 KB, patch)
2012-12-03 14:17 PST, Sergio Martins
no flags Details | Formatted Diff | Diff
Patch (1.70 KB, patch)
2012-12-12 02:44 PST, Sergio Martins
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Sergio Martins 2012-11-20 04:12:36 PST
Fix QNX Qt build by enabling JIT.
Comment 1 Sergio Martins 2012-11-20 04:17:51 PST
Created attachment 175187 [details]
Patch
Comment 2 Sergio Martins 2012-11-20 04:21:45 PST
Created attachment 175188 [details]
Patch
Comment 3 Sergio Martins 2012-11-20 04:23:30 PST
This is related to https://bugs.webkit.org/show_bug.cgi?id=98031 ( LLint failure )
Comment 4 Simon Hausmann 2012-11-21 04:10:14 PST
Comment on attachment 175188 [details]
Patch

View in context: https://bugs.webkit.org/attachment.cgi?id=175188&action=review

> Source/WTF/wtf/Platform.h:1008
> +#if !defined(ENABLE_YARR_JIT) && (ENABLE(JIT) || ENABLE(LLINT_C_LOOP)) && !PLATFORM(CHROMIUM) && !(OS(QNX) && PLATFORM(QT))

This change is missing a ChangeLog and I don't understand why this part is necessary (no changelog ;)

If you enable the JIT, why not also enable YARR_JIT?
Comment 5 Sergio Martins 2012-11-21 04:13:34 PST
Seems like the Changelog changes weren't uploaded
Comment 6 Sergio Martins 2012-12-03 14:17:10 PST
Created attachment 177325 [details]
Patch
Comment 7 Simon Hausmann 2012-12-10 01:35:21 PST
Comment on attachment 177325 [details]
Patch

View in context: https://bugs.webkit.org/attachment.cgi?id=177325&action=review

> Source/WTF/wtf/Platform.h:900
> +    && !(OS(QNX) && !PLATFORM(QT)) // We use jit in qnx qt

jit -> JIT. qnx -> QNX. qt -> Qt


And the use of C++ comments in this header file breaks the build of any C files, as the Gtk EWS indicated.
Comment 8 Sergio Martins 2012-12-12 02:44:08 PST
Created attachment 179011 [details]
Patch
Comment 9 WebKit Review Bot 2012-12-12 03:40:11 PST
Comment on attachment 179011 [details]
Patch

Clearing flags on attachment: 179011

Committed r137449: <http://trac.webkit.org/changeset/137449>
Comment 10 WebKit Review Bot 2012-12-12 03:40:15 PST
All reviewed patches have been landed.  Closing bug.