Fix QNX Qt build by enabling JIT. https://bugs.webkit.org/show_bug.cgi?id=102794

Patch by Sergio Martins <sergio.martins@kdab.com> on 2012-12-12
Reviewed by Simon Hausmann.

JIT is working, so enable it. Otherwise LLINT gets enabled, and
that doesn't compile.

YARR_JIT is crashing at this time though, so disable it.

* wtf/Platform.h:

Canonical link: https://commits.webkit.org/123004@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@137449 268f45cc-cd09-0410-ab3c-d52691b4dbfc